--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <body>
 <h1>This is a heading</h1>
 <p>This is a paragraph.</p>
-  <py-script src="heartattack.py">
-    </py-script>
+  <py-script src="heartattack.py"></py-script>
 </body>
 </html>
